# krapp

./: memo.md  pyproject.toml
src/krapp/: __init__.py  cli.py  config_manager.py  content_formatter.py  date_extractor.py  diary_organizer.py  streamlit_app.py  text_db_manager.py  txt2md.py  yaml_frontmatter_parser.py
tests/krapp/: test_config_manager.py  test_date_extractor.py  test_diary_organizer.py  test_txt2md.py  test_yaml_frontmatter_parser.py
